[package]
name = "stark-crypto-wrapper-wasm"
version = "0.1.7"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
rust-crypto-lib-base = { version = "0.2.0", path = "./rust-crypto-lib-base" }
starknet-crypto = "0.8.1"
wasm-bindgen = "0.2.104"

[dev-dependencies]
wasm-bindgen-test = "0.3.54"
